# RussianDocsOCR

./: .gitignore  README.md  pyproject.toml  requirements.txt
document_processing/: __init__.py
document_processing/models/Angles90/CoreML/: model.json  model.mlmodel
document_processing/models/Angles90/ONNX/: model.json
document_processing/models/Angles90/OpenVINO/: model.ir
document_processing/models/Angles90/TFlite/: model.json  model.tflite
document_processing/models/Blur/ONNX/: model.json  model.onnx
document_processing/models/Blur/OpenVINO/: model.json
document_processing/models/Blur/TFlite/: model.json  model.tflite
document_processing/models/Borders/ONNX/: model.json
document_processing/models/DocType/OpenVINO/: model.json
document_processing/models/DocType/TFlite/: model.json
document_processing/models/Glare/H5/: model.h5  model.json
document_processing/models/Glare/TFlite/: model.json  model.tflite
document_processing/models/LCDSpoofing/H5/: model.h5  model.json
document_processing/models/LCDSpoofing/ONNX/: model.onnx
document_processing/models/LCDSpoofing/OpenVINO/: model.json
document_processing/models/LCDSpoofing/TFlite/: model.tflite
document_processing/models/PrintSpoofing/H5/: model.h5  model.json
document_processing/models/PrintSpoofing/TFlite/: model.json
document_processing/models/TextFields/ONNX/: model.json
document_processing/models/TextFields/OpenVINO/: model.json
document_processing/models/TextFields/TFlite/: model.json
document_processing/models/Words/CoreML/: model.json
document_processing/models/Words/ONNX/: model.json
document_processing/pipeline_modules/: __init__.py  base_module.py
document_processing/pipeline_modules/blur_detector/: quality.py
document_processing/pipeline_modules/doc_detector/: doc_detector.py  image_transformation.py
document_processing/pipeline_modules/glare_detector/: __init__.py  glare.py
document_processing/pipeline_modules/ocr_engnums/: __init__.py
document_processing/pipeline_modules/ocr_rus/: __init__.py  ocr_rus.py
document_processing/pipeline_modules/print_spoofing_detector/: __init__.py
document_processing/pipeline_modules/words_detector/: words_detector.py
document_processing/processing/: postprocessing.py
russian_docs_ocr/document_processing/config/: __init__.py  models_path.yaml
russian_docs_ocr/document_processing/pipeline/: pipeline.py
russian_docs_ocr/document_processing/pipeline_modules/angles_classificator/: __init__.py  angles_classificator.py
russian_docs_ocr/document_processing/pipeline_modules/blur_detector/: __init__.py  blur.py
russian_docs_ocr/document_processing/pipeline_modules/doc_detector/: __init__.py
russian_docs_ocr/document_processing/pipeline_modules/doctype_classificator/: __init__.py  doc_type.py
russian_docs_ocr/document_processing/pipeline_modules/glare_detector/: quality.py
russian_docs_ocr/document_processing/processing/: __init__.py  inference.py  models.py  preprocessing.py
russian_docs_ocr/scripts/: ocr_patches.py
russian_docs_ocr/scripts/bench_results/: ONNX_cpu.csv  OpenVINO_cpu.csv  OpenVINO_gpu.csv
scripts/: benchmark.py  process_img.py  process_video.py
scripts/bench_results/: ONNX_gpu.csv
tests/: test_angle90.py  test_blur.py  test_glare.py  test_lcd_spoofing.py  test_ocr_engnums.py  test_ocr_rus.py  test_print_spoofing.py  test_words.py
(+38 files in other folders)
