[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "RussianDocsOCR"
description = "Library to process Russian Documents using neural networks"
authors = [
    { name="Vitaly Melnikov", email="protei300@gmail.com" },
    { name="Dmitry Valuev", email="dee-mon@mail.ru"},
    { name="Alexander Karpich", email="avkarpich@gmail.com"},
    { name="Anastasya Mityanina", email="av.mityanina@zbrsk.ru"},
    { name="Alexander Vokhmintsev", email="vav@csu.ru"},
]
dependencies = [
    "coremltools==7.0",
    "matplotlib==3.8.0",
    "numpy==1.26.1",
    "onnxruntime-gpu==1.16.1",
    "opencv-contrib-python==4.8.1.78",
    "pandas==2.1.2",
    "Pillow==10.1.0",
    "py-cpuinfo==9.0.0",
    "pytest==7.4.3",
    "PyYAML==6.0.1",
    "scikit-learn==1.3.2",
    "tensorflow==2.14.0",
    "tqdm==4.66.1",
    "openvino==2023.1.0"
]


[tool.setuptools]
packages = ['document_processing',]

[tool.setuptools.dynamic]
version = {attr = "document_processing.__version__"}