[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "russian_docs_ocr"
dynamic = ["version"]
authors = [
    {name = "Митянина Анастасия Владимировна", email = "av.mityanina@zbrsk.ru"},
    {name = "Мельников Виталий Андреевич", email = "protei300@gmail.com"},
    {name = "Валуев Дмитрий Валерьевич", email = "dee-mon@mail.ru"},
    {name = "Карпич Александр Владимирович", email = "avkarpich@gmail.com"},
    {name = "Вохминцев Александр Владиславович", email = "vav@csu.ru"},
]
description = "Библиотека распознавания документов РФ"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ocr", "russian", "documents", "rus", "russian_docs_ocr"]
license = {text = "Apache License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = [
    "matplotlib==3.8.0",
    "numpy==1.26.1",
    "py_cpuinfo==9.0.0",
    "PyYAML==6.0.1",
    "scikit_learn==1.3.2",
    "tqdm==4.66.1",
    "opencv-contrib-python==4.8.1.78",
    "pandas==2.1.2",
    "Pillow==10.1.0",
    "onnxruntime-gpu==1.16.1",
    "coremltools==7.2",
    "tensorflow==2.14.0",
    "openvino==2023.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3"
]

[project.urls]
Documentation = "https://github.com/protei300/RussianDocsOCR"
repository = "https://github.com/protei300/RussianDocsOCR"

[project.scripts]
russian_docs_ocr_procvess_video = "russian_docs_ocr.scripts.process_video:main"
russian_docs_ocr_procvess_image = "russian_docs_ocr.scripts.process_img:main"
russian_docs_ocr_patches = "russian_docs_ocr.scripts.ocr_patches:main"
russian_docs_ocr_benchmark = "russian_docs_ocr.scripts.benchmark:main"

[tool.hatch.version]
path = "russian_docs_ocr/document_processing/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "russian_docs_ocr/tests",
    "russian_docs_ocr/scripts/bench_results"
]
include = [
    "russian_docs_ocr/document_processing",
    "russian_docs_ocr/scripts",
]

[tool.hatch.build.targets.wheel]
packages = ["russian_docs_ocr"]

[tool.flake8]
max-line-length = 80
exclude = [
    "russian_docs_ocr/tests"
]